# bitcoin-mining-simulation

./: .gitignore  README.md  local.sh  out.txt
rust/: Cargo.toml
rust/src/: main.rs
test/: block.spec.ts
